<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEFEFE">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sky"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_bg"
        android:text="@string/sky"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_bliss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_bg"
        android:text="@string/bliss"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sky" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_escape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_bg"
        android:text="@string/escape"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_bliss" />

    <TextView
        android:id="@+id/txt_ship_name_filed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toStartOf="@+id/txt_ship_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/btn_escape"
        app:layout_constraintTop_toBottomOf="@id/btn_escape"
        android:text="@string/ship_name" />

    <TextView
        android:id="@+id/txt_ship_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@id/btn_escape"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_ship_name_filed"
        app:layout_constraintTop_toBottomOf="@id/btn_escape"
        tools:text="Norwegian Sky" />


    <TextView
        android:id="@+id/txt_capacity_filed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toStartOf="@+id/txt_capacity"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/btn_escape"
        app:layout_constraintTop_toBottomOf="@id/txt_ship_name_filed"
        android:text="@string/passenger_capacity" />

    <TextView
        android:id="@+id/txt_capacity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@id/btn_escape"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_capacity_filed"
        app:layout_constraintTop_toBottomOf="@id/txt_ship_name_filed"
        tools:text="2,004 (double occupancy)" />


    <TextView
        android:id="@+id/txt_crew_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toStartOf="@+id/txt_crew"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/btn_escape"
        app:layout_constraintTop_toBottomOf="@id/txt_capacity"
        android:text="@string/crew" />

    <TextView
        android:id="@+id/txt_crew"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@id/btn_escape"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_crew_field"
        app:layout_constraintTop_toBottomOf="@id/txt_capacity"
        tools:text="899" />

    <TextView
        android:id="@+id/txt_inaugural_date_filed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toStartOf="@+id/txt_inaugural_date"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/btn_escape"
        app:layout_constraintTop_toBottomOf="@id/txt_crew"
        android:text="@string/inaugural_date" />

    <TextView
        android:id="@+id/txt_inaugural_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@id/btn_escape"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txt_inaugural_date_filed"
        app:layout_constraintTop_toBottomOf="@id/txt_crew"
        tools:text="1999" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/ship_details"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="txt_inaugural_date_filed,txt_crew_field,txt_capacity,txt_inaugural_date,txt_ship_name_filed,txt_crew,txt_ship_name,txt_capacity_filed" />

</androidx.constraintlayout.widget.ConstraintLayout>
